<resources>
    <string name="app_name">MySche2022</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user">Người dùng</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_jointProject">Lịch nhóm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Logout">Đăng xuất</string>
    <string name="logout_message">Xác nhận đăng xuất</string>
    <string name="nav_profile">Thông tin người dùng</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_personal_scheduld">Lịch của tôi</string>
    <string name="nav_jointschedule">Lịch nhóm</string>
</resources>