<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/icons8_male_user_64">

        </item>

        <item android:id="@+id/nav_setting"
            android:title="@string/nav_setting"
            android:icon="@drawable/icons8_setting_164">

        </item>

        <item android:id="@+id/nav_personal_schedule"
            android:title="@string/nav_personal_scheduld"
            android:icon="@drawable/icons8_calendar_150">

        </item>
        <item android:id="@+id/nav_joint_schedule"
            android:title="@string/nav_jointschedule"
            android:icon="@drawable/icons8_group_64">

        </item>

        <item android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/icons8_logout_50">

        </item>

    </group>
</menu>